design initial service api
